2012年6月2日 杉本祐介 ・学生データの一覧を表示するようにした   これに伴い、StudentListAdapter.java、student_view.xmlを追加した。 ・科目名、授業時間を設定できるようにした   バーコードリーダをキーボードとして接続していると、ソフトウェアキーボードが表示されないため、   何かしら対策を講じる必要がある。 ・Studentクラスにいくつかの変更を加えた   変数名の変更、アクセッサメソッドの追加など。 ・Sheetクラスにアクセッサメソッドを追加した ・学籍番号の判定は保持バッファが6文字になったときのみ行うようにした ・データ追加時の重複チェックを追加メソッド内で行うようにした ・データ追加のタイミングを変更した ・必要な例外のみをcatchするようにした ・ストリームのcloseをfinallyブロックに移した ・return文の括弧を除去した

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:id="@+id/menu_set_subject"
+          android:title="@string/menu_set_subject"
+          android:icon="@android:drawable/ic_menu_set_as"
+          android:numericShortcut="1" />
+    <item android:id="@+id/menu_set_time"
+          android:title="@string/menu_set_time"
+          android:icon="@android:drawable/ic_menu_set_as"
+          android:numericShortcut="2" />
     <item android:id="@+id/menu_open"
           android:title="@string/menu_open"
           android:icon="@android:drawable/ic_menu_set_as"
-          android:numericShortcut="1" />
+          android:numericShortcut="3" />
     <item android:id="@+id/menu_save"
           android:title="@string/menu_save"
           android:icon="@android:drawable/ic_menu_save"
-          android:numericShortcut="2" />
+          android:numericShortcut="4" />
 </menu>
