--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,4 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical" >
+    <ListView android:id="@+id/student_list"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent" />
 </LinearLayout>
