--- a/res/layout/student_view.xml
+++ b/res/layout/student_view.xml
@@ -5,25 +5,28 @@
               android:orientation="horizontal" >
     <TextView android:id="@+id/student_num"
               android:layout_width="0dip"
-              android:layout_height="match_parent"
-              android:layout_weight="1"
+              android:layout_height="wrap_content"
+              android:layout_weight="2"
               android:gravity="center"
               android:textSize="20sp" />
+    <include layout="@layout/vertical_divider" />
     <TextView android:id="@+id/student_no"
               android:layout_width="0dip"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:layout_weight="4"
               android:gravity="center"
               android:textSize="20sp" />
+    <include layout="@layout/vertical_divider" />
     <TextView android:id="@+id/student_name"
               android:layout_width="0dip"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:layout_weight="6"
               android:gravity="center"
               android:textSize="20sp" />
+    <include layout="@layout/vertical_divider" />
     <TextView android:id="@+id/num_of_nfc_id"
               android:layout_width="0dip"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="center"
               android:textSize="20sp" />
