--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -44,6 +44,7 @@
               android:layout_height="wrap_content"
               android:divider="#111"
               android:dividerHeight="1dip"
-              android:fastScrollEnabled="true" />
+              android:fastScrollEnabled="true"
+              android:scrollingCache="false" />
     <include layout="@layout/horizontal_divider" />
 </LinearLayout>
