2012年6月11日 杉本祐介 ・ファイル選択アクティビティにおいて、ソートを行うようにした ・ファイル選択アクティビティにおいて、隠しファイルの表示非表示を選択できるようにした ・ファイル選択アクティビティにおいて、拡張子を別に指定できるようにした ・拡張子が1つだけ指定されていた場合、新規ファイル作成時に自動で付加するようにした ・科目名と授業時間を1つのダイアログで設定できるようにした

--- a/res/menu/file_choose_menu.xml
+++ b/res/menu/file_choose_menu.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:id="@+id/menu_show_invisible_file"
+          android:title="@string/menu_show_invisible_file"
+          android:icon="@android:drawable/ic_menu_report_image"
+          android:numericShortcut="1" />
     <item android:id="@+id/menu_new_file"
           android:title="@string/menu_new_file"
           android:icon="@android:drawable/ic_menu_add"
-          android:numericShortcut="1" />
+          android:numericShortcut="2" />
 </menu>
