2012年6月16日 杉本祐介 ・選択中の行が常にハイライトされるようにした ・学籍番号を読み取った際のデータの選択方法を変更した

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -45,6 +45,6 @@
               android:divider="#111"
               android:dividerHeight="1dip"
               android:fastScrollEnabled="true"
-              android:scrollingCache="false" />
+              android:choiceMode="singleChoice" />
     <include layout="@layout/horizontal_divider" />
 </LinearLayout>
