--- a/res/layout/student_view.xml
+++ b/res/layout/student_view.xml
@@ -8,26 +8,30 @@
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:gravity="center"
-              android:textSize="20sp" />
+              android:textSize="20sp"
+              android:textColor="@drawable/list_selector_text" />
     <include layout="@layout/vertical_divider" />
     <TextView android:id="@+id/student_no"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="4"
               android:gravity="center"
-              android:textSize="20sp" />
+              android:textSize="20sp"
+              android:textColor="@drawable/list_selector_text" />
     <include layout="@layout/vertical_divider" />
     <TextView android:id="@+id/student_name"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="6"
               android:gravity="center"
-              android:textSize="20sp" />
+              android:textSize="20sp"
+              android:textColor="@drawable/list_selector_text" />
     <include layout="@layout/vertical_divider" />
     <TextView android:id="@+id/num_of_nfc_id"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="center"
-              android:textSize="20sp" />
+              android:textSize="20sp"
+              android:textColor="@drawable/list_selector_text" />
 </LinearLayout>
