2012年6月27日 杉本祐介 ・パッケージ名を変更した ・初期アクティビティをStudentAttendanceActivityに変更した

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -45,6 +45,7 @@
               android:divider="#111"
               android:dividerHeight="1dip"
               android:fastScrollEnabled="true"
+              android:listSelector="@drawable/list_selector_background"
               android:choiceMode="singleChoice" />
     <include layout="@layout/horizontal_divider" />
 </LinearLayout>
