2012年6月27日 杉本祐介 ・初期アクティビティをStudentAttendanceActivityに変更した ・編集内容が破棄される際に保存されていなければ確認するようにした ・出席管理機能を実装した ・初期ディレクトリを変更した ・パッケージ名を変更した

--- a/res/layout/dialog_new_file.xml
+++ b/res/layout/dialog_new_file.xml
@@ -7,12 +7,11 @@
     <EditText android:id="@+id/dialog_file_name"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
-              android:layout_weight="89"
+              android:layout_weight="1"
               android:inputType="text"
               android:maxLines="1"
               android:hint="@string/dialog_new_file_hint" />
     <TextView android:id="@+id/dialog_file_extension"
-              android:layout_width="0dip"
-              android:layout_height="wrap_content"
-              android:layout_weight="11" />
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content" />
 </LinearLayout>
