--- a/res/menu/student_attendance_menu.xml
+++ b/res/menu/student_attendance_menu.xml
@@ -4,12 +4,16 @@
           android:title="@string/menu_make_list"
           android:icon="@android:drawable/ic_menu_add"
           android:numericShortcut="1" />
+    <item android:id="@+id/menu_setting"
+          android:title="@string/menu_setting"
+          android:icon="@android:drawable/ic_menu_preferences"
+          android:numericShortcut="3" />
     <item android:id="@+id/menu_open"
           android:title="@string/menu_open"
           android:icon="@android:drawable/ic_menu_set_as"
-          android:numericShortcut="2" />
+          android:numericShortcut="3" />
     <item android:id="@+id/menu_save"
           android:title="@string/menu_save"
           android:icon="@android:drawable/ic_menu_save"
-          android:numericShortcut="3" />
+          android:numericShortcut="4" />
 </menu>
