2012年7月10日 杉本祐介 ・FileChooseActivityにフォルダ選択機能を追加した ・FileChooseActivityにキャンセルボタンを追加した ・出席データの保存先を設定できるようにした ・出席データの保存名を設定できるようにした ・位置情報の更新間隔を設定できるようにした

--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -5,5 +5,16 @@
                             android:key="setting_add_location"
                             android:defaultValue="false"
                             android:summary="@string/setting_add_location_summary" />
+        <EditTextPreference android:title="@string/setting_location_interval_title"
+                            android:key="setting_location_interval"
+                            android:defaultValue="5"
+                            android:inputType="number" />
+        <Preference android:title="@string/setting_change_attendance_dir_title"
+                    android:key="setting_attendance_dir" />
+        <EditTextPreference android:title="@string/setting_change_attendance_name_title"
+                            android:key="setting_attendance_name"
+                            android:defaultValue="%S_%y%M%d%h%m%s"
+                            android:inputType="text"
+                            android:dialogMessage="@string/setting_change_attendance_name_message" />
     </PreferenceCategory>
 </PreferenceScreen>
