--- a/res/layout/file_choose.xml
+++ b/res/layout/file_choose.xml
@@ -6,9 +6,15 @@
     <include layout="@layout/horizontal_divider" />
     <ListView android:id="@+id/file_list"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="0dip"
+              android:layout_weight="1"
               android:divider="#111"
               android:dividerHeight="1dip"
               android:fastScrollEnabled="true" />
     <include layout="@layout/horizontal_divider" />
+    <LinearLayout android:id="@+id/file_button_layout"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
+    </LinearLayout>
 </LinearLayout>
