--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="dialog_student_menu">
-        <item>@string/dialog_student_menu_edit</item>
-        <item>@string/dialog_student_menu_nfc_id_remove</item>
-        <item>@string/dialog_student_menu_remove</item>
+    <string-array name="setting_location_provider_entries">
+        <item>@string/setting_location_provider_network</item>
+        <item>@string/setting_location_provider_gps</item>
+    </string-array>
+    <string-array name="setting_location_provider_values">
+        <item>@string/zero</item>
+        <item>@string/one</item>
     </string-array>
 
     <string-array name="dialog_attendance_menu">
@@ -11,5 +14,11 @@
         <item>@string/lateness</item>
         <item>@string/leave_early</item>
         <item>@string/absence</item>
+    </string-array>
+
+    <string-array name="dialog_student_menu">
+        <item>@string/dialog_student_menu_edit</item>
+        <item>@string/dialog_student_menu_nfc_id_remove</item>
+        <item>@string/dialog_student_menu_remove</item>
     </string-array>
 </resources>
