--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/setting_general_title">
+    <PreferenceCategory android:title="@string/setting_location_title">
         <CheckBoxPreference android:title="@string/setting_add_location_title"
                             android:key="setting_add_location"
                             android:defaultValue="false"
                             android:summary="@string/setting_add_location_summary" />
+        <ListPreference android:title="@string/setting_location_provider_title"
+                        android:key="setting_location_provider"
+                        android:defaultValue="0"
+                        android:entries="@array/setting_location_provider_entries"
+                        android:entryValues="@array/setting_location_provider_values"
+                        android:dependency="setting_add_location" />
         <EditTextPreference android:title="@string/setting_location_interval_title"
                             android:key="setting_location_interval"
                             android:defaultValue="5"
-                            android:inputType="number" />
+                            android:inputType="number"
+                            android:dependency="setting_add_location" />
+        <PreferenceScreen android:title="@string/setting_location_format_title"
+                          android:key="setting_location_format"
+                          android:dependency="setting_add_location">
+            <CheckBoxPreference android:title="@string/setting_location_format_latitude_title"
+                                android:key="setting_location_format_latitude"
+                                android:defaultValue="true"
+                                android:summary="@string/setting_location_format_latitude_summary" />
+            <CheckBoxPreference android:title="@string/setting_location_format_longitude_title"
+                                android:key="setting_location_format_longitude"
+                                android:defaultValue="true"
+                                android:summary="@string/setting_location_format_longitude_summary" />
+            <CheckBoxPreference android:title="@string/setting_location_format_altitude_title"
+                                android:key="setting_location_format_altitude"
+                                android:defaultValue="true"
+                                android:summary="@string/setting_location_format_altitude_summary" />
+            <CheckBoxPreference android:title="@string/setting_location_format_accuracy_title"
+                                android:key="setting_location_format_accuracy"
+                                android:defaultValue="true"
+                                android:summary="@string/setting_location_format_accuracy_summary" />
+        </PreferenceScreen>
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/setting_save_title">
         <Preference android:title="@string/setting_change_attendance_dir_title"
                     android:key="setting_attendance_dir" />
         <EditTextPreference android:title="@string/setting_change_attendance_name_title"
@@ -16,5 +45,13 @@
                             android:defaultValue="%S_%y%M%d%h%m%s"
                             android:inputType="text"
                             android:dialogMessage="@string/setting_change_attendance_name_message" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/setting_other_title">
+        <PreferenceScreen android:title="@string/setting_license_title"
+                          android:summary="@string/setting_license_summary">
+            <Preference android:title="@string/setting_license_apache_title"
+                        android:key="setting_license_apache"
+                        android:summary="@string/setting_license_apache_summary" />
+        </PreferenceScreen>
     </PreferenceCategory>
 </PreferenceScreen>
