2012年7月18日 杉本祐介 ・GPSで測位を行う際、端末でGPSが無効になっている場合はその旨を表示するようにした
2012年7月17日 杉本祐介
・新規フォルダ作成機能を追加した

--- a/res/menu/file_choose_menu.xml
+++ b/res/menu/file_choose_menu.xml
@@ -4,8 +4,12 @@
           android:title="@string/menu_show_invisible_file"
           android:icon="@android:drawable/ic_menu_report_image"
           android:numericShortcut="1" />
-    <item android:id="@+id/menu_new_file"
-          android:title="@string/menu_new_file"
-          android:icon="@android:drawable/ic_menu_add"
+    <item android:id="@+id/menu_create_file"
+          android:title="@string/menu_create_file"
+          android:icon="@drawable/ic_new_sheet"
           android:numericShortcut="2" />
+    <item android:id="@+id/menu_create_directory"
+          android:title="@string/menu_create_directory"
+          android:icon="@drawable/ic_create_dir"
+          android:numericShortcut="3" />
 </menu>
