2012年8月15日 杉本祐介 ・災害モード時、リストフォルダ直下のCSVファイル全てから学生データの照合を行うようにした ・災害モード時、出席データをLAN経由で公開するようにした ・動作しないためサーブレットの動的読み込みを一時撤回した

--- a/res/menu/disaster_mode_menu.xml
+++ b/res/menu/disaster_mode_menu.xml
@@ -8,4 +8,8 @@
           android:title="@string/menu_setting"
           android:icon="@android:drawable/ic_menu_preferences"
           android:numericShortcut="2" />
+    <item android:id="@+id/menu_refresh"
+          android:title="@string/menu_refresh"
+          android:icon="@drawable/ic_menu_refresh"
+          android:numericShortcut="3" />
 </menu>
