2012年8月17日 杉本祐介 ・空の状態で出席データを出力できる不具合を修正した ・災害モード時、同じ学生がリストに追加されてしまう不具合を修正した

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -27,4 +27,8 @@
         <item>@string/dialog_student_menu_nfc_id_remove</item>
         <item>@string/dialog_student_menu_remove</item>
     </string-array>
+
+    <string-array name="dialog_disaster_menu">
+        <item>@string/dialog_disaster_take_picture</item>
+    </string-array>
 </resources>
