--- a/res/xml/camera_preference.xml
+++ b/res/xml/camera_preference.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/setting_photo_title">
+    <PreferenceCategory android:title="@string/setting_photo_title"
+                        android:key="setting_photo">
         <ListPreference android:title="@string/setting_rotation_title"
                         android:key="setting_rotation"
                         android:defaultValue="0"
                         android:summary="@string/setting_rotation_auto"
                         android:dialogTitle="@string/setting_rotation_title"
                         android:entries="@array/setting_rotation_labels"
-                        android:entryValues="@array/setting_rotation_values" />
-        <ListPreference android:title="@string/setting_picture_size_title"
-                        android:key="setting_picture_size"
-                        android:summary="@string/setting_picture_size_summary"
-                        android:dialogTitle="@string/setting_picture_size_title" />
+                        android:entryValues="@array/setting_rotation_values"
+                        android:order="0" />
         <CheckBoxPreference android:title="@string/setting_use_take_autofocus_title"
                             android:key="setting_use_take_autofocus"
                             android:defaultValue="false"
-                            android:summary="@string/setting_use_take_autofocus_summary" />
+                            android:summary="@string/setting_use_take_autofocus_summary"
+                            android:order="2" />
         <CheckBoxPreference android:title="@string/setting_use_tap_autofocus_title"
                             android:key="setting_use_tap_autofocus"
                             android:defaultValue="true"
-                            android:summary="@string/setting_use_tap_autofocus_summary" />
+                            android:summary="@string/setting_use_tap_autofocus_summary"
+                            android:order="3" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/setting_movie_title">
         <ListPreference android:title="@string/setting_movie_quality_title"
