--- a/res/menu/disaster_mode_menu.xml
+++ b/res/menu/disaster_mode_menu.xml
@@ -8,8 +8,12 @@
           android:title="@string/menu_setting"
           android:icon="@android:drawable/ic_menu_preferences"
           android:numericShortcut="2" />
+    <item android:id="@+id/menu_add_attendance"
+          android:title="@string/menu_add_attendance"
+          android:icon="@android:drawable/ic_menu_add"
+          android:numericShortcut="3" />
     <item android:id="@+id/menu_refresh"
           android:title="@string/menu_refresh"
           android:icon="@drawable/ic_menu_refresh"
-          android:numericShortcut="3" />
+          android:numericShortcut="4" />
 </menu>
