--- a/res/menu/disaster_mode_menu.xml
+++ b/res/menu/disaster_mode_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_make_list"
           android:title="@string/menu_make_list"
-          android:icon="@android:drawable/ic_menu_add"
+          android:icon="@drawable/ic_new_sheet"
           android:numericShortcut="1" />
     <item android:id="@+id/menu_setting"
           android:title="@string/menu_setting"
