2012年9月27日 杉本祐介 ・災害モードにおいて、各種手動登録に対応した ・災害モードにおいて、バーコードリーダによる出席確認に対応した ・災害モードにおいて、出席データのインポート/エクスポートに対応した ・取得する位置情報から高度を削除した

--- a/res/menu/disaster_mode_menu.xml
+++ b/res/menu/disaster_mode_menu.xml
@@ -16,4 +16,12 @@
           android:title="@string/menu_refresh"
           android:icon="@drawable/ic_menu_refresh"
           android:numericShortcut="4" />
+    <item android:id="@+id/menu_open"
+          android:title="@string/menu_read_from_csv_file"
+          android:icon="@android:drawable/ic_menu_set_as"
+          android:numericShortcut="5" />
+    <item android:id="@+id/menu_save"
+          android:title="@string/menu_save"
+          android:icon="@android:drawable/ic_menu_save"
+          android:numericShortcut="6" />
 </menu>
