2012年10月4日 杉本祐介 ・学籍番号での検索に対応した ・パスワードの変更に対応した ・出席確認画面において、各種手動登録に対応した ・出席確認画面において、バーコードリーダによる出席確認に対応した

--- a/res/layout/dialog_search_student_no.xml
+++ b/res/layout/dialog_search_student_no.xml
@@ -3,7 +3,7 @@
           android:id="@+id/dialog_student_no"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:inputType="textCapCharacters"
+          android:inputType="text"
           android:digits="@string/alphabet_and_number"
           android:maxLines="1"
           android:hint="@string/dialog_search_student_no_hint" />
