--- a/res/menu/student_attendance_menu.xml
+++ b/res/menu/student_attendance_menu.xml
@@ -8,12 +8,20 @@
           android:title="@string/menu_setting"
           android:icon="@android:drawable/ic_menu_preferences"
           android:numericShortcut="2" />
+    <item android:id="@+id/menu_add_attendance"
+          android:title="@string/menu_add_attendance"
+          android:icon="@android:drawable/ic_menu_add"
+          android:numericShortcut="3" />
+    <item android:id="@+id/menu_refresh"
+          android:title="@string/menu_refresh"
+          android:icon="@drawable/ic_menu_refresh"
+          android:numericShortcut="4" />
     <item android:id="@+id/menu_open"
           android:title="@string/menu_open"
           android:icon="@android:drawable/ic_menu_set_as"
-          android:numericShortcut="3" />
+          android:numericShortcut="5" />
     <item android:id="@+id/menu_save"
           android:title="@string/menu_save"
           android:icon="@android:drawable/ic_menu_save"
-          android:numericShortcut="4" />
+          android:numericShortcut="6" />
 </menu>
