--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -60,4 +60,9 @@
         <item>@string/dialog_add_attendance_menu_search</item>
         <item>@string/dialog_add_attendance_menu_manual</item>
     </string-array>
+
+    <string-array name="dialog_register_id_menu">
+        <item>@string/dialog_add_attendance_menu_list</item>
+        <item>@string/dialog_add_attendance_menu_search</item>
+    </string-array>
 </resources>
