2012年10月17日 杉本祐介 ・出席確認画面からリスト作成画面に遷移する際、CSVファイルが開かれていた場合はそのファイルを開くようにした ・編集したリストを保存する際、元にしたリストがある場合は、最初に上書きを行うかどうか確認するようにした ・出席管理画面において、別のリストのNFCタグの読み取りに対応した ・出席管理画面または災害モードからNFCタグの登録を行った際、リストの再読み込みを行うようにした ・CSVファイルを開く際、保存されていなければ確認するようにした ・災害モードにおいて、サーバへの送信の一時停止/再開を行うボタンを追加した ・学生リスト、出席リストのそれぞれで、展開元のファイルのインスタンスを持つようにした   学生リストでは上記に加え、保存を行った際にインスタンスを更新する。 ・リスト作成画面において、登録を削除したNFCタグの再登録ができない不具合を修正した

--- a/res/layout/disaster_mode.xml
+++ b/res/layout/disaster_mode.xml
@@ -50,8 +50,19 @@
               android:listSelector="@drawable/list_selector_background"
               android:choiceMode="singleChoice" />
     <include layout="@layout/horizontal_divider" />
-    <Button android:id="@+id/read_start"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/attendance_read_start_label" />
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
+        <Button android:id="@+id/read_start"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/attendance_read_start_label" />
+        <Button android:id="@+id/send_pause"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:enabled="false"
+                android:text="@string/disaster_send_resume_label" />
+    </LinearLayout>
 </LinearLayout>
