2012年10月22日 杉本祐介 ・リスト外のNFCタグの登録を行う際、バーコードの読み取りによっても登録が行えるようにした

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -64,5 +64,6 @@
     <string-array name="dialog_register_id_menu">
         <item>@string/dialog_add_attendance_menu_list</item>
         <item>@string/dialog_add_attendance_menu_search</item>
+        <item>@string/dialog_register_id_menu_barcode</item>
     </string-array>
 </resources>
