--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="setting_behavior_student_no_entries">
+        <item>@string/setting_behavior_student_no_dialog</item>
+        <item>@string/setting_behavior_student_no_ignore</item>
+    </string-array>
+    <string-array name="setting_behavior_student_no_values">
+        <item>@string/zero</item>
+        <item>@string/one</item>
+    </string-array>
+
+    <string-array name="setting_behavior_nfc_id_entries">
+        <item>@string/setting_behavior_nfc_id_dialog</item>
+        <item>@string/setting_behavior_nfc_id_ignore</item>
+    </string-array>
+    <string-array name="setting_behavior_nfc_id_values">
+        <item>@string/zero</item>
+        <item>@string/one</item>
+    </string-array>
+
     <string-array name="setting_location_provider_entries">
         <item>@string/setting_location_provider_network</item>
         <item>@string/setting_location_provider_gps</item>
