--- a/res/xml/preference.xml
+++ b/res/xml/preference.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <PreferenceCategory android:title="@string/setting_general_title">
+        <ListPreference android:title="@string/setting_behavior_student_no_title"
+                        android:key="setting_behavior_student_no"
+                        android:defaultValue="0"
+                        android:entries="@array/setting_behavior_student_no_entries"
+                        android:entryValues="@array/setting_behavior_student_no_values" />
+        <ListPreference android:title="@string/setting_behavior_nfc_id_title"
+                        android:key="setting_behavior_nfc_id"
+                        android:defaultValue="0"
+                        android:entries="@array/setting_behavior_nfc_id_entries"
+                        android:entryValues="@array/setting_behavior_nfc_id_values" />
+    </PreferenceCategory>
     <PreferenceCategory android:title="@string/setting_location_title">
         <CheckBoxPreference android:title="@string/setting_add_location_title"
                             android:key="setting_add_location"
