2012年10月31日 杉本祐介 ・学生マスタ(旧学生リスト)のフォーマットを変更した ・学生マスタと受講者リストを分離した ・出席管理画面および災害モードにおいて、画面上部に科目名と授業時間を表示するようにした   表示部をタップすることで、内容を編集できるようになっている。 ・学生マスタを読み込み直す際、プログレスダイアログを表示するようにした

--- a/res/menu/student_list_menu.xml
+++ b/res/menu/student_list_menu.xml
@@ -4,8 +4,8 @@
           android:title="@string/menu_new_sheet"
           android:icon="@drawable/ic_new_sheet"
           android:numericShortcut="1" />
-    <item android:id="@+id/menu_edit_info"
-          android:title="@string/menu_edit_info"
+    <item android:id="@+id/menu_edit_class_name"
+          android:title="@string/menu_edit_class_name"
           android:icon="@android:drawable/ic_menu_edit"
           android:numericShortcut="2" />
     <item android:id="@+id/menu_add_attendance"
