--- a/res/layout/disaster_mode.xml
+++ b/res/layout/disaster_mode.xml
@@ -7,13 +7,44 @@
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
+        <TextView android:id="@+id/subject"
+                  android:layout_width="0dip"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="3"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:singleLine="true"
+                  android:ellipsize="end" />
+        <include layout="@layout/vertical_divider" />
+        <TextView android:id="@+id/time"
+                  android:layout_width="0dip"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="3"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:singleLine="true"
+                  android:ellipsize="end" />
+        <include layout="@layout/vertical_divider" />
+        <TextView android:id="@+id/count"
+                  android:layout_width="0dip"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:gravity="center"
+                  android:textSize="20sp"
+                  android:singleLine="true"
+                  android:ellipsize="end" />
+    </LinearLayout>
+    <include layout="@layout/horizontal_divider" />
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
         <TextView android:id="@+id/student_num"
                   android:layout_width="0dip"
                   android:layout_height="wrap_content"
                   android:layout_weight="2"
                   android:gravity="center"
                   android:textSize="20sp"
-                  android:text="@string/header_student_num" />
+                  android:text="@string/header_attendance_no" />
         <include layout="@layout/vertical_divider" />
         <TextView android:id="@+id/student_no"
                   android:layout_width="0dip"
