2012年11月10日 杉本祐介 ・自動保存機能を実装した ・リストの枠線の色を変更した ・上書き確認ダイアログ表示中に画面を回転させると保存に失敗する不具合を修正した

--- a/res/layout/disaster_mode.xml
+++ b/res/layout/disaster_mode.xml
@@ -75,7 +75,7 @@
               android:layout_width="match_parent"
               android:layout_height="0dip"
               android:layout_weight="1"
-              android:divider="#111"
+              android:divider="@color/border_gray"
               android:dividerHeight="1dip"
               android:fastScrollEnabled="true"
               android:listSelector="@drawable/list_selector_background"
