--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="dim_foreground_dark">#bebebe</color>
     <color name="dim_foreground_dark_inverse">#323232</color>
+
+    <color name="border_gray">#333</color>
 </resources>
