2012年11月14日 杉本祐介 1.8.1: ・学生マスタのインスタンスをアプリケーション全体で共有するようにした   これに伴い、CustomApplicationクラスを追加した。 ・学生マスタに読み込み時の各動作に対応したリスナクラスを追加した ・学生マスタにリスナに関するコンストラクタ/メソッドを追加した ・各アクティビティにおいて、onResumeで最新の学生マスタのインスタンスを取得するようにした ・学生マスタ再読み込み時のプログレスダイアログをバータイプのものにした ・スプラッシュ画面にプログレスバーを追加した ・スプラッシュ画面からメインの画面を呼び出す際、災害モードの設定状態をチェックするようにした ・学生登録画面実装への準備

--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -4,8 +4,20 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
     <ImageView android:layout_width="match_parent"
-               android:layout_height="match_parent"
+               android:layout_height="0dip"
+               android:layout_weight="1"
                android:src="@drawable/splash"
                android:scaleType="centerInside"
                android:contentDescription="@string/app_name" />
+    <ProgressBar android:id="@+id/progress_bar"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:max="100"
+                 android:progress="0"
+                 style="?android:attr/progressBarStyleHorizontal" />
+    <TextView android:id="@+id/progress_text"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:singleLine="true"
+              android:ellipsize="end" />
 </LinearLayout>
