--- a/res/menu/student_register_menu.xml
+++ b/res/menu/student_register_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_new_sheet"
-          android:title="@string/menu_new_sheet"
-          android:icon="@drawable/ic_new_sheet"
-          android:numericShortcut="1" />
     <item android:id="@+id/menu_edit_class_name"
           android:title="@string/menu_edit_class_name"
           android:icon="@android:drawable/ic_menu_edit"
+          android:numericShortcut="1" />
+    <item android:id="@+id/menu_setting"
+          android:title="@string/menu_setting"
+          android:icon="@android:drawable/ic_menu_preferences"
           android:numericShortcut="2" />
     <item android:id="@+id/menu_add_student"
           android:title="@string/menu_add_student"
@@ -16,12 +16,4 @@
           android:title="@string/menu_refresh"
           android:icon="@drawable/ic_menu_refresh"
           android:numericShortcut="4" />
-    <item android:id="@+id/menu_open"
-          android:title="@string/menu_open"
-          android:icon="@android:drawable/ic_menu_set_as"
-          android:numericShortcut="5" />
-    <item android:id="@+id/menu_save"
-          android:title="@string/menu_save"
-          android:icon="@android:drawable/ic_menu_save"
-          android:numericShortcut="6" />
 </menu>
