2012年11月21日 杉本祐介 1.9.0: ・一部のコメントの書き方を変更した ・NFCタグを読み取ると、自動保存が複数回行われる不具合を修正した ・スプラッシュ画面でバックボタンが押された場合、メイン画面を起動しないようにした

--- a/res/layout/dialog_edit_time.xml
+++ b/res/layout/dialog_edit_time.xml
@@ -5,4 +5,4 @@
           android:layout_height="wrap_content"
           android:inputType="text"
           android:maxLines="1"
-          android:hint="@string/dialog_edit_time_hint" />
+          android:hint="@string/dialog_time_hint" />
