--- a/res/layout/student_register.xml
+++ b/res/layout/student_register.xml
@@ -4,6 +4,11 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:keepScreenOn="true">
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:gravity="right"
+              android:textSize="20sp"
+              android:text="@string/register_read_nfc_info" />
     <TableLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:stretchColumns="1">
