--- a/res/menu/student_register_menu.xml
+++ b/res/menu/student_register_menu.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_edit_class_name"
-          android:title="@string/menu_edit_class_name"
-          android:icon="@android:drawable/ic_menu_edit"
+    <item android:id="@+id/menu_add_class"
+          android:title="@string/menu_add_class"
+          android:icon="@drawable/ic_new_sheet"
           android:numericShortcut="1" />
     <item android:id="@+id/menu_setting"
           android:title="@string/menu_setting"
           android:icon="@android:drawable/ic_menu_preferences"
           android:numericShortcut="2" />
-    <item android:id="@+id/menu_add_student"
-          android:title="@string/menu_add_student"
-          android:icon="@android:drawable/ic_menu_add"
+    <item android:id="@+id/menu_operation"
+          android:title="@string/menu_operation"
+          android:icon="@drawable/ic_menu_friendslist"
           android:numericShortcut="3" />
     <item android:id="@+id/menu_refresh"
           android:title="@string/menu_refresh"
           android:icon="@drawable/ic_menu_refresh"
           android:numericShortcut="4" />
+    <item android:id="@+id/menu_edit_class_name"
+          android:title="@string/menu_edit_class_name"
+          android:icon="@android:drawable/ic_menu_edit"
+          android:numericShortcut="5" />
+    <item android:id="@+id/menu_save"
+          android:title="@string/menu_save"
+          android:icon="@android:drawable/ic_menu_save"
+          android:numericShortcut="6" />
 </menu>
