--- a/res/menu/student_attendance_menu.xml
+++ b/res/menu/student_attendance_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_make_list"
-          android:title="@string/menu_make_list"
+    <item android:id="@+id/menu_open_register"
+          android:title="@string/menu_open_register"
           android:icon="@drawable/ic_new_sheet"
           android:numericShortcut="1" />
     <item android:id="@+id/menu_setting"
